<resources>
    <string name="app_name">MyNotification</string>
    <string name="normal">普通通知</string>
    <string name="folded">折叠式通知</string>
    <string name="hung">悬挂式通知</string>
    <string name="radio_button_private">private</string>
    <string name="radio_button_public">public</string>
    <string name="radio_button_secret">secret</string>
    <string name="label">展开后的自定义视图</string>
    <string name="image">image</string>
</resources>
